force-app/main/default/objects/SCOC__LCRDataSourceCreditOfferIndex__c/SCOC__LCRDataSourceCreditOfferIndex__c.object-meta.xml
<CustomObject>
    <description>Liquid Credit Data Source Credit Offer Index List</description>
    <label>LCRDataSourceCreditOfferIndex</label>
    <nameField>
        <displayFormat>LCREDCO-{00000}</displayFormat>
        <label>Liquid Credit Response Entity Credit Off</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCRDataSourceCreditOfferIndices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>