force-app/main/default/objects/SCOC__LCRDataSourceCreditOfferIndex__c/fields/SCOC__decile__c.field-meta.xml
<CustomField>
    <fullName>SCOC__decile__c</fullName>
    <description>This field contains the Decile returned in the Liquid Credit Response for this entity data source analysis.</description>
    <label>Decile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>