force-app/main/default/objects/SCOC__LCRDataSourceCreditOfferIndex__c/fields/SCOC__factorList_factorCode_1__c.field-meta.xml
<CustomField>
    <fullName>SCOC__factorList_factorCode_1__c</fullName>
    <description>This field contains the data source credit offer index factor list factor code 1 from the Liquid Credit response.</description>
    <label>Factor List Factor Code 1</label>
    <length>8</length>
    <type>Text</type>
</CustomField>