force-app/main/default/objects/SCOC__LCRDataSourceCreditOfferIndex__c/fields/SCOC__LCREntity__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LCREntity__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated Liquid Credit Response Entity.</description>
    <label>Liquid Credit Response Entity</label>
    <referenceTo>SCOC__LCREntity__c</referenceTo>
    <relationshipLabel>Liquid Credit Response Entity Credit Offer Indices</relationshipLabel>
    <relationshipName>LCRDataSourceCreditOfferIndex</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>