force-app/main/default/objects/SCOC__LCRDataSourceCreditOfferIndex__c/fields/SCOC__medianOfferAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__medianOfferAmount__c</fullName>
    <description>This field contains the Median Offer Amount returned in the Liquid Credit Response for this entity data source analysis.</description>
    <label>Median Offer Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>